# typst

./: .gitignore  Altafraner.Typst.csproj  CompileResultSafe.cs  CompilerSafe.cs  Typst.cs  TypstConfiguration.cs
.github/workflows/: publish.yml
typst_bindings/: Cargo.toml  build.rs
typst_bindings/src/: compiler.rs  lib.rs  world.rs
