[package]
name = "typst_bindings"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
ecow = "0.2"

typst = "0.14.2"
typst-kit = { version = "0.14.2", features = [
    "downloads",
    "embed-fonts",
    "vendor-openssl",
] }
typst-pdf = "0.14.2"
log = "0.4.29"

[build-dependencies]
csbindgen = "1.9.7"
